--- a/password-reset.html
+++ b/password-reset.html
@@ -4,21 +4,18 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="A fully featured admin theme which can be used to build CRM, CMS, etc.">
+    <meta name="description" content="">
 
     <!-- Libs CSS -->
     <link rel="stylesheet" href="assets/fonts/feather/feather.min.css">
-    <link rel="stylesheet" href="assets/libs/highlight.js/styles/vs2015.css">
-    <link rel="stylesheet" href="assets/libs/quill/dist/quill.core.css">
-    <link rel="stylesheet" href="assets/libs/select2/dist/css/select2.min.css">
-    <link rel="stylesheet" href="assets/libs/flatpickr/dist/flatpickr.min.css">
-    <link rel="shortcut icon" href="assets/img/bookings/favicon.png">
+    <link rel="shortcut icon" href="assets/img/favicon.png">
     <!-- Theme CSS -->
 
     <link rel="stylesheet" href="assets/css/theme.min.css" id="stylesheetLight">
 
     <!-- Custom -->
     <link rel="stylesheet" href="assets/css/custom.css" id="stylesheetLight">
+    <link rel="stylesheet" href="./assets/css/custom-inner.css">
     <style>
         body {
             display: none;
@@ -39,7 +36,7 @@
 
                 <div class="text-center">
                     <a href="index.html">
-                        <img class="img-fluid form-logo" src="./assets/img/logo-dark.png" />
+                        <img class="img-fluid form-logo" src="./assets/img/logo.png" />
                     </a>
                 </div>
 
@@ -86,21 +83,12 @@
 
     <!-- JAVASCRIPT
     ================================================== -->
-    <!-- Libs JS -->
-    <script src="assets/libs/jquery/dist/jquery.min.js"></script>
-    <script src="assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/libs/chart.js/dist/Chart.min.js"></script>
-    <script src="assets/libs/chart.js/Chart.extension.min.js"></script>
-    <script src="assets/libs/highlightjs/highlight.pack.min.js"></script>
-    <script src="assets/libs/flatpickr/dist/flatpickr.min.js"></script>
-    <script src="assets/libs/jquery-mask-plugin/dist/jquery.mask.min.js"></script>
-    <script src="assets/libs/list.js/dist/list.min.js"></script>
-    <script src="assets/libs/quill/dist/quill.min.js"></script>
-    <script src="assets/libs/dropzone/dist/min/dropzone.min.js"></script>
-    <script src="assets/libs/select2/dist/js/select2.min.js"></script>
+    <script src="./assets/libs/jquery/dist/jquery.min.js"></script>
+    <script src="./assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
 
     <!-- Theme JS -->
-    <script src="assets/js/theme.min.js"></script>
+    <script src="./assets/js/theme.min.js"></script>
 
 </body>
 
