--- a/results.html
+++ b/results.html
@@ -96,12 +96,12 @@
                 <!-- Navigation -->
                 <ul class="navbar-nav mb-md-4">
                     <li class="nav-item">
-                        <a class="nav-link active" href="index.html">
+                        <a class="nav-link" href="index.html">
                             <i class="fe fe-home"></i> Home
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="results.html">
+                        <a class="nav-link active" href="results.html">
                             <i class="fe fe-credit-card"></i> Results
                         </a>
                     </li>
@@ -236,123 +236,9 @@
 
             <div class="row">
                 <div class="col-md-9">
-                    <div class="row">
-                        <div class="col-12 col-lg-6 col-xl">
-
-                            <!-- Card -->
-                            <div class="card">
-                                <div class="card-body">
-                                    <div class="row align-items-center">
-                                        <div class="col">
-
-                                            <!-- Title -->
-                                            <h6 class="card-title text-uppercase text-muted mb-2">
-                                                Academic session
-                                            </h6>
-
-                                            <!-- Heading -->
-                                            <span class="h2 mb-0">
-                                                2018/2019
-                                            </span>
-
-                                        </div>
-                                        <div class="col-auto">
-                                            <!-- Icon -->
-                                            <span class="h1 fe fe-calendar text-primary mb-0"></span>
-                                        </div>
-                                    </div> <!-- / .row -->
-
-                                </div>
-                            </div>
-
-                        </div>
-                        <div class="col-12 col-lg-6 col-xl">
-
-                            <!-- Card -->
-                            <div class="card">
-                                <div class="card-body">
-                                    <div class="row align-items-center">
-                                        <div class="col">
-
-                                            <!-- Title -->
-                                            <h6 class="card-title text-uppercase text-muted mb-2">
-                                                Current semester
-                                            </h6>
-
-                                            <!-- Heading -->
-                                            <span class="h2 mb-0">
-                                                SECOND
-                                            </span>
-
-                                        </div>
-                                        <div class="col-auto">
-
-                                            <!-- Icon -->
-                                            <span class="h1 fe fe-star text-primary mb-0"></span>
-
-                                        </div>
-                                    </div> <!-- / .row -->
-
-                                </div>
-                            </div>
-
-                        </div>
-
-                        <div class="col-12 col-lg-6 col-xl">
-
-                            <!-- Card -->
-                            <div class="card">
-                                <div class="card-body">
-                                    <div class="row align-items-center">
-                                        <div class="col">
-
-                                            <!-- Title -->
-                                            <h6 class="card-title text-uppercase text-muted mb-2">
-                                                Current level
-                                            </h6>
-
-                                            <!-- Heading -->
-                                            <span class="h2 mb-0">
-                                                HND 1
-                                            </span>
-
-                                        </div>
-                                        <div class="col-auto">
-
-                                            <!-- Icon -->
-                                            <span class="h1 fe fe-bar-chart text-primary mb-0"></span>
-
-                                        </div>
-                                    </div> <!-- / .row -->
-
-                                </div>
-                            </div>
-
-                        </div>
-
-                    </div> <!-- / .row -->
 
                     <div class="card">
-                        <div class="card-header">
-                            <div class="row align-items-center">
-                                <div class="col">
 
-                                    <!-- Title -->
-                                    <h4 class="card-header-title">
-                                        Recent
-                                    </h4>
-
-                                </div>
-                                <div class="col-auto">
-
-                                    <!-- Button -->
-                                    <a href="results.html" class="btn btn-sm btn-white">
-                                        View All
-                                    </a>
-
-                                </div>
-                            </div> <!-- / .row -->
-                        </div>
                         <div class="table-responsive mb-0">
                             <table class="table table-sm table-nowrap card-table">
                                 <thead>
@@ -389,6 +275,27 @@
                                     </tr>
                                 </thead>
                                 <tbody class="list">
+                                    <tr>
+                                        <td>
+                                            <span class="fe fe-calendar pr-1"></span> 23th of Sept, 2019
+                                        </td>
+                                        <td>
+                                            2019
+                                        </td>
+                                        <td>
+                                            Second Semester
+                                        </td>
+                                        <td>
+                                            HND 1
+                                        </td>
+                                        <td>
+                                            3.80
+                                        </td>
+                                        <td class="text-right">
+                                            <a href="viewResult.html" class="btn btn-primary text-white btn-sm">View</a>
+                                            <a class="btn btn-warning text-white btn-sm">Print</a>
+                                        </td>
+                                    </tr>
                                     <tr>
                                         <td>
                                             <span class="fe fe-calendar pr-1"></span> 23th of Sept, 2019
