--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 
                 <!-- Customize -->
-                <a href="#" class="btn btn-block btn-primary mb-4">
+                <a href="sendComplaint.html" class="btn btn-block btn-primary mb-4">
                     Send Complaint
                 </a>
 
