--- a/gradCalculator.html
+++ b/gradCalculator.html
@@ -197,46 +197,121 @@
         </nav>
 
 
-        <div class="row justify-content-center">
-            <div class="col-12 col-lg-10 col-xl-8">
-
-                <!-- Header -->
-                <div class="header mt-md-5">
-                    <div class="header-body">
-                        <div class="row align-items-center">
-                            <div class="col">
+        <div class="container-fluid">
+            <!-- Header -->
+            <div class="header mt-md-5">
+                <div class="header-body">
+                    <div class="row align-items-center">
+                        <div class="col">
 
 
-                                <!-- Title -->
-                                <h1 class="header-title">
-                                    Grade Calculator
-                                </h1>
+                            <!-- Title -->
+                            <h1 class="header-title">
+                                Grade Calculator
+                            </h1>
+                            <p class="small text-muted mt-2">This helps you calculate your GPA for a single semester
+                            </p>
 
-                            </div>
+                        </div>
 
-                        </div> <!-- / .row -->
-                    </div>
-                </div>
-
-                <!-- Content -->
-                <div class="row">
-                    <div class="col-md-12">
-                        <form>
-                            <div class="form-group">
-                                <label for="exampleInputEmail1">Email address</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1"
-                                    placeholder="Enter email">
-                            </div>
-                            <div class="form-group">
-                                <label for="complaint">Complaint</label>
-                                <textarea class="form-control" name="" id="" rows="5"></textarea>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Send Complaint</button>
-                        </form>
-                    </div>
+                    </div> <!-- / .row -->
                 </div>
             </div>
 
+            <!-- Content -->
+            <div class="row">
+                <div class="col-md-8">
+                    <form>
+                        <div class="row">
+                            <div class="form-group col-md-4">
+                                <label for="courseName">Course Name</label>
+                                <input type="email" class="form-control" id="courseName" placeholder="Course Name">
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label for="courseName">Course Units</label>
+                                <select name="" id="" class="form-control">
+                                    <option>Select Unit</option>
+                                    <option>1 Unit</option>
+                                    <option>2 Units</option>
+                                    <option>3 Units</option>
+                                    <option>4 Units</option>
+                                    <option>5 Units</option>
+                                </select>
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label for="courseName">Course Grade</label>
+                                <select name="" id="" class="form-control">
+                                    <option>Select Grade</option>
+                                    <option>A</option>
+                                    <option>B</option>
+                                    <option>C</option>
+                                    <option>D</option>
+                                    <option>E</option>
+                                </select>
+                            </div>
+                        </div>
+                        <button class="btn btn-outline-primary mr-3">Add Course</button>
+                        <button type="submit" class="btn btn-primary">Calculate GPA</button>
+                    </form>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="row align-items-center">
+                                <div class="col">
+
+                                    <!-- Title -->
+                                    <h4 class="card-header-title">
+                                        Courses
+                                    </h4>
+
+                                </div>
+                                <div class="col-auto">
+
+                                    <!-- Link -->
+                                    <button class="btn btn-primary btn-sm">
+                                        Calculate
+                                    </button>
+
+                                </div>
+                            </div> <!-- / .row -->
+                        </div>
+                        <div class="card-body">
+
+                            <div class="row align-items-center">
+                                <div class="col ml-n2">
+                                    <h4 class="card-title mb-1">
+                                        Operating System
+                                    </h4>
+                                    <a class="card-text small text-danger" href="#">
+                                        Remove
+                                    </a>
+                                </div>
+                                <div class="col-auto">
+                                    <span class="btn btn-rounded-circle btn-sm btn-warning">A</span>
+                                </div>
+                            </div> <!-- / .row -->
+
+                            <!-- Divider -->
+                            <hr>
+                            <div class="row align-items-center">
+                                <div class="col ml-n2">
+                                    <h4 class="card-title mb-1">
+                                        Software Engineering
+                                    </h4>
+                                    <a class="card-text small text-danger" href="#">
+                                        Remove
+                                    </a>
+                                </div>
+                                <div class="col-auto">
+                                    <span class="btn btn-rounded-circle btn-sm btn-warning">A</span>
+                                </div>
+                            </div> <!-- / .row -->
+
+                        </div> <!-- / .card-body -->
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
