--- a/calcResult.html
+++ b/calcResult.html
@@ -157,7 +157,7 @@
 
                 <!-- Form -->
                 <div class="mr-4 d-none d-md-flex pt-4">
-                    <a href="#"> <span class="fe fe-arrow-left"></span>Go to Homepage</a>
+                    <a href="#"> <span class="fe fe-arrow-left"></span>Go to Calculator</a>
                 </div>
 
                 <!-- User -->
@@ -207,10 +207,8 @@
 
                             <!-- Title -->
                             <h1 class="header-title">
-                                Grade Calculator
+                                5.0 GPA
                             </h1>
-                            <p class="small text-muted mt-2">This helps you calculate your GPA for a single semester
-                            </p>
 
                         </div>
 
@@ -220,97 +218,83 @@
 
             <!-- Content -->
             <div class="row">
-                <div class="col-md-8">
-                    <form>
-                        <div class="row">
-                            <div class="form-group col-md-4">
-                                <label for="courseName">Course Name</label>
-                                <input type="email" class="form-control" id="courseName" placeholder="Course Name">
-                            </div>
-                            <div class="form-group col-md-4">
-                                <label for="courseName">Course Units</label>
-                                <select name="" id="" class="form-control">
-                                    <option>Select Unit</option>
-                                    <option>1 Unit</option>
-                                    <option>2 Units</option>
-                                    <option>3 Units</option>
-                                    <option>4 Units</option>
-                                    <option>5 Units</option>
-                                </select>
-                            </div>
-                            <div class="form-group col-md-4">
-                                <label for="courseName">Course Grade</label>
-                                <select name="" id="" class="form-control">
-                                    <option>Select Grade</option>
-                                    <option>A</option>
-                                    <option>B</option>
-                                    <option>C</option>
-                                    <option>D</option>
-                                    <option>E</option>
-                                </select>
-                            </div>
-                        </div>
-                        <button class="btn btn-outline-primary mr-3">Add Course</button>
-                        <a href="calcResult.html" class="btn btn-primary">Calculate GPA</a>
-                    </form>
-                </div>
                 <div class="col-md-4">
                     <div class="card">
                         <div class="card-header">
                             <div class="row align-items-center">
                                 <div class="col">
+                                    <h4 class="card-header-title font-weight-bold">
+                                        Analysis
+                                    </h4>
 
-                                    <!-- Title -->
-                                    <h4 class="card-header-title">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-body pt-0">
+                            <div class="table-responsive">
+                                <table class="table">
+                                    <tbody>
+                                        <tr>
+                                            <td class="pl-0">Total Units</td>
+                                            <td class="pl-0">3</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="pl-0">Total Grades Taken</td>
+                                            <td class="pl-0">15</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="pl-0">Total Grades Passed</td>
+                                            <td class="pl-0"> 15</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div> <!-- / .card-body -->
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="row align-items-center">
+                                <div class="col">
+                                    <h4 class="card-header-title font-weight-bold">
                                         Courses
                                     </h4>
 
                                 </div>
-                                <div class="col-auto">
-
-                                    <!-- Link -->
-                                    <a href="calcResult.html" class="btn btn-primary btn-sm">
-                                        Calculate
-                                    </a>
-
-                                </div>
-                            </div> <!-- / .row -->
+                            </div>
                         </div>
-                        <div class="card-body">
-
-                            <div class="row align-items-center">
-                                <div class="col ml-n2">
-                                    <h4 class="card-title mb-1">
-                                        Operating System
-                                    </h4>
-                                    <a class="card-text small text-danger" href="#">
-                                        Remove
-                                    </a>
-                                </div>
-                                <div class="col-auto">
-                                    <span class="btn btn-rounded-circle btn-sm btn-warning">A</span>
-                                </div>
-                            </div> <!-- / .row -->
-
-                            <!-- Divider -->
-                            <hr>
-                            <div class="row align-items-center">
-                                <div class="col ml-n2">
-                                    <h4 class="card-title mb-1">
-                                        Software Engineering
-                                    </h4>
-                                    <a class="card-text small text-danger" href="#">
-                                        Remove
-                                    </a>
-                                </div>
-                                <div class="col-auto">
-                                    <span class="btn btn-rounded-circle btn-sm btn-warning">A</span>
-                                </div>
-                            </div> <!-- / .row -->
-
+                        <div class="card-body pt-0">
+                            <div class="table-responsive">
+                                <table class="table">
+                                    <thead>
+                                        <th>Course Name</th>
+                                        <th>Units</th>
+                                        <th>Grade</th>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>Operating System</td>
+                                            <td>2</td>
+                                            <td>A</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Software Engineering</td>
+                                            <td>2</td>
+                                            <td>A</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div> <!-- / .card-body -->
                     </div>
                 </div>
+            </div>
+            <div>
+                <a href="#" class="btn btn-primary">Save Result</a>
+                <span class="ml-4">
+                    <a href="#" class="text-danger">Go Back</a>
+                </span>
             </div>
         </div>
     </div>
