--- a/admin/results.html
+++ b/admin/results.html
@@ -62,13 +62,6 @@
                             <hr class="mb-2">
                             <div class="mb-3">
                                 <div class="">
-                                    <div class="dropzone dropzone-single mb-3 dz-clickable" data-toggle="dropzone"
-                                        data-dropzone-url="http://">
-                                        <div class="dz-preview dz-preview-single"></div>
-
-                                        <div class="dz-default dz-message"><span>Drop files here to
-                                                upload</span></div>
-                                    </div>
                                     <div class="row">
                                         <div class="form-group col-md-12">
                                             <label class="small">Class</label>
@@ -80,6 +73,7 @@
                                             </select>
                                         </div>
 
+
                                         <div class="form-group col-md-12">
                                             <label class="small">Session</label>
                                             <select name="" id="" class="form-control">
@@ -87,15 +81,26 @@
                                                 <option value="">Second Semester</option>
                                             </select>
                                         </div>
+                                        <div class="form-group col-md-12">
+                                            <label class="small">Course</label>
+                                            <select name="" id="" class="form-control">
+                                                <option value="">Data Structure</option>
+                                                <option value="">Software Engineering</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="dropzone dropzone-single mb-3 dz-clickable" data-toggle="dropzone"
+                                        data-dropzone-url="http://">
+                                        <div class="dz-preview dz-preview-single"></div>
+
+                                        <div class="dz-default dz-message"><span>Drop files here to
+                                                upload</span></div>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="mt-5 text-center">
                                 <a href="#" class="btn btn-primary btn-block">Upload Result</a>
-                            </div>
-                            <div class="cancel-ap text-center cancel-wid">
-                                <a class="small text-danger" href="#">Cancel</a>
                             </div>
                         </div>
                     </div>
